--- a/index.html
+++ b/index.html
@@ -1,12 +1,236 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Глейси</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Глейси</title>
+</head>
 
-  </body>
+<body>
+  <header class="main-header">
+    <h2 class="visually-hidden">Секция хедера</h2>
+    <div class="container">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="#" alt="">
+        </a>
+        <ul class="site-navigation">
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="delivery.html">Доставка и оплата</a></li>
+          <li><a href="company.html">О Компании</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li><a href="#">Поиск</a></li>
+          <li><a href="#">Вход</a></li>
+          <li><a href="basket.html">Пусто</a></li>
+        </ul>
+        <p>С 10 до 20, ежедневно</p>
+        <p>8 812 450-25-25</p>
+      </nav>
+    </div>
+  </header>
+  <section class="slider">
+    <h2 class="visually-hidden">Секция слайдера</h2>
+    <div class="container">
+      <ul class="slider-catalog">
+        <li>
+          <img src="#" alt="">
+          <p>Крем-брюле и пломбир
+            с малиновым джемом</p>
+          <a class="button" href="#">Давайте оба!</a>
+        </li>
+      </ul>
+      <ul class="slider-catalog">
+        <li>
+          <img src="#" alt="">
+          <p>Шоколадный пломбир
+            и лимонный сорбет </p>
+          <a class="button" href="#">Давайте оба!</a>
+        </li>
+      </ul>
+      <ul class="slider-catalog">
+        <li>
+          <img src="#" alt="">
+          <p>Пломбир с помадкой
+            и клубничный щербет</p>
+          <a class="button" href="#">Давайте оба!</a>
+        </li>
+      </ul>
+      <ul class="slider-controls">
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+  </section>
+  <main>
+    <section class="banners">
+      <div class="container">
+        <ul class="banner-catalog">
+          <li class="banner-item">
+            <h3>Малинка даром!</h3>
+            <p>При покупке 2 кг любого фруктового мороженого,
+              добавим в ваш заказ банку малинового варенья бесплатно.
+            </p>
+            <a class="button banner-button" href="#">Хочу варенье!</a>
+          </li>
+          <li class="banner-item">
+            <h3>Шоколадки даром!</h3>
+            <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку
+              вкуснейшей шоколадной присыпки совершенно бесплатно.
+            </p>
+            <a class="button banner-button" href="#">Хочу шоколадки!</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="hits">
+      <h2 class="visually-hidden">Секция хитов</h2>
+      <div class="container">
+        <ul class="hits-catalog">
+          <li class="hit-item">
+            <img src="#" alt="">
+            <img class="hit-icon" src="#" alt="">
+            <p class="hit-price">310<span class="hit-price-icon">₽/кг</span></p>
+            <p class="hit-description">Сливочное с апельсиновым джемом и
+              цитрусовой стружкой</p>
+          </li>
+          <li class="hit-item">
+            <img src="#" alt="">
+            <img class="hit-icon" src="#" alt="">
+            <p class="hit-price">380<span class="hit-price-icon">₽/кг</span></p>
+            <p class="hit-description">Сливочно-кофейное с кусочками шоколада </p>
+          </li>
+          <li class="hit-item">
+            <img src="#" alt="">
+            <img class="hit-icon" src="#" alt="">
+            <p class="hit-price">355<span class="hit-price-icon">₽/кг</span></p>
+            <p class="hit-description">Сливочно-клубничное с присыпкой из
+              белого шоколада</p>
+          </li>
+          <li class="hit-item">
+            <img src="#" alt="">
+            <img class="hit-icon" src="#" alt="">
+            <p class="hit-price">415<span class="hit-price-icon">₽/кг</span></p>
+            <p class="hit-description">Сливочное крем-брюле с карамельной
+              подливкой</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="seo">
+      <h2 class="visually-hidden">Секция SEO</h2>
+      <div class="container">
+        <p>Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого
+          собственного производства на развес</p>
+        <ul class="seo-features-list">
+          <li class="feature-item">
+            <img src="#" alt="">
+            <p class="feature-description">Все наше мороженое изготавливается
+              на собственном производстве, с использованием современного оборудования
+              и проверенных временем технологий.</p>
+          </li>
+          <li class="feature-item">
+            <img src="#" alt="">
+            <p class="feature-description">Для приготовления мороженого используются
+              настоящие сливки и молоко высочайшего качества. Все дополнительные
+              ингредиенты и добавки произведены из натурального, экологически
+              чистого сырья.</p>
+          </li>
+          <li class="feature-item">
+            <img src="#" alt="">
+            <p class="feature-description">Закупка ингредиентов производится только
+              у проверенных фермерских хозяйств и компаний, с которыми нас связывает
+              долговременное сотрудничество.</p>
+          </li>
+          <li class="feature-item">
+            <img src="#" alt="">
+            <p class="feature-description">Доставка нашего мороженого до заказчиков
+              осуществляется в специальном термопаке, который не дает мороженому
+              растаять в пути и позволяет сохранить превосходный вкус.</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="blog-mailing">
+      <h2 class="visually-hidden">Секция новостей и подписки</h2>
+      <aside class="blog-news">
+        <p class="blog-title">Новое в нашем блоге</p>
+        <a class="blog-news-title" href="#">10 способов сервировки
+          фруктовых щербетов к
+          столу
+        </a>
+      </aside>
+      <aside class="mailing">
+        <p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого
+          вкусного, что у нас происходит. Обещаем не спамить и не слать всякой
+          ненужной ерунды. Честно =)
+        </p>
+        <form class="mailing-signup">
+          <label for="mailing-email"></label>
+          <input id="mailing-email" class="mailing-signup-input" type="text" name="email"
+            placeholder="Электронная почта">
+          <button class="button mailing-button">Отправить</button>
+        </form>
+      </aside>
+    </section>
+    <section class="contacts">
+      <h2 class="visually-hidden">Секция контактов</h2>
+      <div class="map">
+      </div>
+      <div class="container">
+        <div class="business-card">
+          <p>Адрес главного офиса
+            и офлайн-магазина:</p>
+          <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+          <p>Для заказов по телефону:</p>
+          <a class="tel" href="tel:8-812-450-25-25">8 812 450-25-25</a>
+          <p>(с 10 до 20 ежедневно)</p>
+          <a class="button modal-writeus" href="#">Форма обратной связи</a>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="main-footer">
+    <div class="container">
+      <ul class="social-button-list">
+        <li class="social-button-container">
+          <a class="social-button" href="#">
+            <img src="#" alt="">
+            <span class="visually-hidden">Твиттер</span>
+          </a>
+        </li>
+        <li class="social-button-container">
+          <a class="social-button" href="#">
+            <img src="#" alt="">
+            <span class="visually-hidden">Инстаграм</span>
+          </a>
+        </li>
+        <li class="social-button-container">
+          <a class="social-button" href="#">
+            <img src="#" alt="">
+            <span class="visually-hidden">Фейсбук</span>
+          </a>
+        </li>
+        <li class="social-button-container">
+          <a class="social-button" href="#">
+            <img src="#" alt="">
+            <span class="visually-hidden">Вконтакте</span>
+          </a>
+        </li>
+      </ul>
+      <ul class="menu">
+        <li class="menu-item">Для поставщиков</li>
+        <li class="menu-item">О производстве</li>
+        <li class="menu-item">Наши документы</li>
+        <li class="menu-item">Экологические стандарты</li>
+      </ul>
+      <div class="made-in">
+        <img src="#" alt="">
+        <p class="made-in-text">Сделано в HTML Academy © 2019</p>
+      </div>
+    </div>
+  </footer>
+</body>
+
 </html>
