Добавляет графику в папку img. Добавляет контентные изображения в разметку

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="#" alt="">
+          <img src="img/logo.png" width="154" height="64" alt="Глейси">
         </a>
         <ul class="site-navigation">
           <li><a href="catalog.html">Каталог</a></li>
@@ -89,28 +89,28 @@
       <div class="container">
         <ul class="hits-catalog">
           <li class="hit-item">
-            <img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+            <img src="img/icecream-1.jpg" width="267" height="267" alt="">
+            <img class="hit-icon" src="img/hit-icon.svg" width="61" height="61" alt="">
             <p class="hit-price">310<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочное с апельсиновым джемом и
               цитрусовой стружкой</p>
           </li>
           <li class="hit-item">
-            <img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+            <img src="img/icecream-2.jpg" width="267" height="267" alt="">
+            <img class="hit-icon" src="img/hit-icon.svg" width="61" height="61" alt="">
             <p class="hit-price">380<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочно-кофейное с кусочками шоколада </p>
           </li>
           <li class="hit-item">
-            <img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+            <img src="img/icecream-3.jpg" width="267" height="267" alt="">
+            <img class="hit-icon" src="img/hit-icon.svg" width="61" height="61" alt="">
             <p class="hit-price">355<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочно-клубничное с присыпкой из
               белого шоколада</p>
           </li>
           <li class="hit-item">
-            <img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+            <img src="img/icecream-4.jpg" width="267" height="267" alt="">
+            <img class="hit-icon" src="img/hit-icon.svg" width="61" height="61" alt="">
             <p class="hit-price">415<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочное крем-брюле с карамельной
               подливкой</p>
@@ -125,26 +125,26 @@
           собственного производства на развес</p>
         <ul class="seo-features-list">
           <li class="feature-item">
-            <img src="#" alt="">
+            <img src="img/icecream-icon.svg" width="49" height="49" alt="">
             <p class="feature-description">Все наше мороженое изготавливается
               на собственном производстве, с использованием современного оборудования
               и проверенных временем технологий.</p>
           </li>
           <li class="feature-item">
-            <img src="#" alt="">
+            <img src="img/cow-icon.svg" width="49" height="49" alt="">
             <p class="feature-description">Для приготовления мороженого используются
               настоящие сливки и молоко высочайшего качества. Все дополнительные
               ингредиенты и добавки произведены из натурального, экологически
               чистого сырья.</p>
           </li>
           <li class="feature-item">
-            <img src="#" alt="">
+            <img src="img/leaf-icon.svg" width="49" height="49" alt="">
             <p class="feature-description">Закупка ингредиентов производится только
               у проверенных фермерских хозяйств и компаний, с которыми нас связывает
               долговременное сотрудничество.</p>
           </li>
           <li class="feature-item">
-            <img src="#" alt="">
+            <img src="img/thermo-icon.svg" width="49" height="49" alt="">
             <p class="feature-description">Доставка нашего мороженого до заказчиков
               осуществляется в специальном термопаке, который не дает мороженому
               растаять в пути и позволяет сохранить превосходный вкус.</p>
@@ -196,25 +196,25 @@
       <ul class="social-button-list">
         <li class="social-button-container">
           <a class="social-button" href="#">
-            <img src="#" alt="">
+            <img src="img/twitter-icon.svg" width="32" height="32" alt="">
             <span class="visually-hidden">Твиттер</span>
           </a>
         </li>
         <li class="social-button-container">
           <a class="social-button" href="#">
-            <img src="#" alt="">
+            <img src="img/insta-icon.svg" width="32" height="32" alt="">
             <span class="visually-hidden">Инстаграм</span>
           </a>
         </li>
         <li class="social-button-container">
           <a class="social-button" href="#">
-            <img src="#" alt="">
+            <img src="img/fb-icon.svg" width="32" height="32" alt="">
             <span class="visually-hidden">Фейсбук</span>
           </a>
         </li>
         <li class="social-button-container">
           <a class="social-button" href="#">
-            <img src="#" alt="">
+            <img src="img/vk-icon.svg" width="32" height="32" alt="">
             <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
@@ -226,7 +226,7 @@
         <li class="menu-item">Экологические стандарты</li>
       </ul>
       <div class="made-in">
-        <img src="#" alt="">
+        <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="">
         <p class="made-in-text">Сделано в HTML Academy © 2019</p>
       </div>
     </div>
