--- a/catalog.html
+++ b/catalog.html
@@ -12,11 +12,11 @@
     <div class="container">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="#" alt="">
+          <img src="img/logo.png" width="154" height="64" alt="Глейси">
         </a>
         <ul class="site-navigation">
           <li><a class="active" href="catalog.html">Каталог</a></li>
-          <li><a href="delivery.html">Доставка и оплата</a></li>
+          <li><a href="delivery.html">Доставка  и оплата</a></li>
           <li><a href="company.html">О Компании</a></li>
         </ul>
         <ul class="user-navigation">
@@ -95,28 +95,28 @@
                 <label class="checkbox-container" aria-label="Выбрать наполнители: сахарные присыпки">
                   <input type="checkbox" name="filler" value="сахарные присыпки" checked>
                   <span class="checkbox-mark"></span>
-                  шоколадные
+                  сахарные присыпки
                 </label>
               </li>
               <li class="filler-list-item" tabindex="0">
                 <label class="checkbox-container" aria-label="Выбрать наполнители: фрукты">
-                  <input type="checkbox" name="filler" value="фрукты" checked>
+                  <input type="checkbox" name="filler" value="фрукты">
                   <span class="checkbox-mark"></span>
-                  шоколадные
+                  фрукты
                 </label>
               </li>
               <li class="filler-list-item" tabindex="0">
                 <label class="checkbox-container" aria-label="Выбрать наполнители: сиропы">
-                  <input type="checkbox" name="filler" value="сиропы" checked>
+                  <input type="checkbox" name="filler" value="сиропы">
                   <span class="checkbox-mark"></span>
-                  шоколадные
+                  сиропы
                 </label>
               </li>
               <li class="filler-list-item" tabindex="0">
                 <label class="checkbox-container" aria-label="Выбрать наполнители: джемы">
-                  <input type="checkbox" name="filler" value="джемы" checked>
+                  <input type="checkbox" name="filler" value="джемы">
                   <span class="checkbox-mark"></span>
-                  шоколадные
+                  джемы
                 </label>
               </li>
             </ul>
@@ -130,63 +130,63 @@
       <div class="container">
         <ul class="goods-list">
           <li class="good-item"><img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+            <img src="img/icecream-1.jpg" width="267" height="267" alt="">
             <p class="hit-price">310<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочное с апельсиновым джемом и
               цитрусовой стружкой</p>
           </li>
-          <li class="good-item"><img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+          <li class="good-item">
+            <img src="img/icecream-2.jpg" width="267" height="267" alt="">
             <p class="hit-price">380<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочно-кофейное с кусочками шоколада</p>
           </li>
-          <li class="good-item"><img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+          <li class="good-item">
+            <img src="img/icecream-3.jpg" width="267" height="267" alt="">
             <p class="hit-price">355<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочно-клубничное с присыпкой из белого шоколада</p>
           </li>
-          <li class="good-item"><img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+          <li class="good-item">
+            <img src="img/icecream-4.jpg" width="267" height="267" alt="">
             <p class="hit-price">415<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочное крем-брюле с карамельной подливкой</p>
           </li>
-          <li class="good-item"><img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+          <li class="good-item">
+            <img src="img/icecream-5.jpg" width="267" height="267" alt="">
             <p class="hit-price">325<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочное с брусничным джемом</p>
           </li>
-          <li class="good-item"><img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+          <li class="good-item">
+            <img src="img/icecream-6.jpg" width="267" height="267" alt="">
             <p class="hit-price">410<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочно-черничное с цельными ягодами черники</p>
           </li>
-          <li class="good-item"><img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+          <li class="good-item">
+            <img src="img/icecream-7.jpg" width="267" height="267" alt="">
             <p class="hit-price">375<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочно-лимонное с карамельной присыпкой</p>
           </li>
-          <li class="good-item"><img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+          <li class="good-item">
+            <img src="img/icecream-8.jpg" width="267" height="267" alt="">
             <p class="hit-price">320<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочное с шоколадной стружкой</p>
           </li>
-          <li class="good-item"><img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+          <li class="good-item">
+            <img src="img/icecream-9.jpg" width="267" height="267" alt="">
             <p class="hit-price">440<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочно-ванильное с кусочками шоколада</p>
           </li>
-          <li class="good-item"><img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+          <li class="good-item">
+            <img src="img/icecream-10.jpg" width="267" height="267" alt="">
             <p class="hit-price">435<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочноe с ментоловым сиропом </p>
           </li>
-          <li class="good-item"><img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+          <li class="good-item">
+            <img src="img/icecream-11.jpg" width="267" height="267" alt="">
             <p class="hit-price">355<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочное с кусочками черного шоколада</p>
           </li>
-          <li class="good-item"><img src="#" alt="">
-            <img class="hit-icon" src="#" alt="">
+          <li class="good-item">
+            <img src="img/icecream-12.jpg" width="267" height="267" alt="">
             <p class="hit-price">420<span class="hit-price-icon">₽/кг</span></p>
             <p class="hit-description">Сливочное с мятным сиропом</p>
           </li>
@@ -221,25 +221,25 @@
       <ul class="social-button-list">
         <li class="social-button-container">
           <a class="social-button" href="#">
-            <img src="#" alt="">
+            <img src="img/twitter-icon.svg" width="32" height="32" alt="">
             <span class="visually-hidden">Твиттер</span>
           </a>
         </li>
         <li class="social-button-container">
           <a class="social-button" href="#">
-            <img src="#" alt="">
+            <img src="img/insta-icon.svg" width="32" height="32" alt="">
             <span class="visually-hidden">Инстаграм</span>
           </a>
         </li>
         <li class="social-button-container">
           <a class="social-button" href="#">
-            <img src="#" alt="">
+            <img src="img/fb-icon.svg" width="32" height="32" alt="">
             <span class="visually-hidden">Фейсбук</span>
           </a>
         </li>
         <li class="social-button-container">
           <a class="social-button" href="#">
-            <img src="#" alt="">
+            <img src="img/vk-icon.svg" width="32" height="32" alt="">
             <span class="visually-hidden">Вконтакте</span>
           </a>
         </li>
@@ -251,7 +251,7 @@
         <li class="menu-item">Экологические стандарты</li>
       </ul>
       <div class="made-in">
-        <img src="#" alt="">
+        <img src="img/logo-htmlacademy.svg" width="108" height="39" alt="">
         <p class="made-in-text">Сделано в HTML Academy © 2019</p>
       </div>
     </div>
