--- a/catalog.html
+++ b/catalog.html
@@ -15,14 +15,68 @@
           <img src="img/logo.png" width="154" height="64" alt="Глейси">
         </a>
         <ul class="site-navigation">
-          <li><a class="active" href="catalog.html">Каталог</a></li>
-          <li><a href="delivery.html">Доставка  и оплата</a></li>
+          <li><a href="catalog.html">Каталог</a>
+            <ul class="catalog-list">
+              <li class="catalog-list-item">
+                <a class="" href="#">Новинки</a>
+              </li>
+              <li class="divider"></li>
+              <li class="catalog-list-item">
+                <a class="" href="#">Сливочное</a>
+              </li>
+              <li class="catalog-list-item">
+                <a class="" href="#">Щербеты</a>
+              </li>
+              <li class="catalog-list-item">
+                <a class="" href="#">Фруктовый лед</a>
+              </li>
+              <li class="catalog-list-item">
+                <a class="" href="#">Мелорин</a>
+              </li>
+            </ul>
+          </li>
+          <li><a href="delivery.html">Доставка и оплата</a></li>
           <li><a href="company.html">О Компании</a></li>
         </ul>
         <ul class="user-navigation">
-          <li><a href="#">Поиск</a></li>
-          <li><a href="#">Вход</a></li>
-          <li><a class="full" href="basket.html">2 товара</a></li>
+          <li><a href="#">Поиск</a>
+            <input class="search-bar" type="text" name="search" value="" placeholder="Что ищем?">
+          </li>
+          <li><a href="#">Вход</a>
+            <form class="sign-form" action="https://echo.htmlacademy.ru" method="post">
+              <input class="sign-form-email" type="text" name="email" value="" placeholder="Электронная почта">
+              <input class="sign-form-password" type="text" name="password" value="" placeholder="Пароль">
+              <button class="button writeus-button" type="submit">
+                <span class="button-text">Войти</span></button>
+              <a class="sign-form-link" href="#">Забыли пароль?</a>
+              <a class="sign-form-link" href="#">Новая регистрация</a>
+            </form>
+          </li>
+          <li><a class="full" href="basket.html">2 товара</a>
+            <div class="basket-full">
+              <ul class="basket-list">
+                <li class="basket-list-item">
+                  <img class="basket-item-small" src="img/icecream-1-small.jpg" alt="">
+                  <p class="basket-item-description">Пломбир с апельсиновым джемом</p>
+                  <p class="basket-item-kg">1,5 кг х
+                    <span class="price-per-kg">200 руб.</span></p>
+                  <p class="item-total-price">300 руб.</p>
+                </li>
+                <li class="basket-list-item">
+                  <img class="basket-item-small" src="img/icecream-2-small.jpg" alt="">
+                  <p class="basket-item-description">Клубничный пломбир с присыпкой
+                    из белого шоколада</p>
+                  <p class="basket-item-kg">1,5 кг х
+                    <span class="price-per-kg">300 руб.</span></p>
+                  <p class="item-total-price">450 руб.</p>
+                </li>
+              </ul>
+              <div class="divider"></div>
+              <p class="basket-price-total">Итого: <span>750 руб.</span></p>
+              <button class="button writeus-button" type="submit">
+                <span class="button-text">Отправить</span></button>
+            </div>
+          </li>
         </ul>
         <p>С 10 до 20, ежедневно</p>
         <p>8 812 450-25-25</p>
@@ -44,36 +98,45 @@
       <div class="container">
         <form class="filters-form">
           <label for="filters-sorting">Сортировка</label>
-          <input id="filters-sorting" class="filters-sorting-input" type="text" name="sorting"
-            placeholder="По популярности">
+          <select id="filters-sorting" class="filters-sorting-select" name="sorting">
+            <option>по популярности</option>
+            <option>сначала недорогие</option>
+            <option>сначала дорогие</option>
+            <option>по жирности</option>
+          </select>
           <label for="filters-pricing">Цена: 100 руб. - 500 руб.</label>
-          <input id="filters-pricing" class="filters-pricing-input" type="text" name="pricing" placeholder="100 - 500">
+          <input id="filters-pricing" class="filters-pricing-input"
+          type="text" name="pricing" placeholder="100 - 500">
           <fieldset class="filters-fat">
             <legend>Жирность:</legend>
             <ul class="filters-fat-list">
               <li class="filters-fat-item">
-                <label class="radio-container" aria-label="Выбрать жирность мороженого: 0%">
+                <label class="radio-container" aria-label="Выбрать жирность
+                мороженого: 0%">
                   <input type="radio" name="fat" value="0%">
                   <span class="radio-mark"></span>
                   0%
                 </label>
               </li>
               <li class="filters-fat-item">
-                <label class="radio-container" aria-label="Выбрать жирность мороженого: до 10%">
+                <label class="radio-container" aria-label="Выбрать жирность
+                мороженого: до 10%">
                   <input type="radio" name="fat" value="10%" checked>
                   <span class="radio-mark"></span>
                   до 10%
                 </label>
               </li>
               <li class="filters-fat-item">
-                <label class="radio-container" aria-label="Выбрать жирность мороженого: до 30%">
+                <label class="radio-container" aria-label="Выбрать жирность
+                мороженого: до 30%">
                   <input type="radio" name="fat" value="30%">
                   <span class="radio-mark"></span>
                   до 30%
                 </label>
               </li>
               <li class="filters-fat-item">
-                <label class="radio-container" aria-label="Выбрать жирность мороженого: выше 30%">
+                <label class="radio-container" aria-label="Выбрать жирность
+                мороженого: выше 30%">
                   <input type="radio" name="fat" value="выше 30%">
                   <span class="radio-mark"></span>
                   выше 30%
@@ -85,35 +148,40 @@
             <legend>Наполнители:</legend>
             <ul class="filler-list">
               <li class="filler-list-item" tabindex="0">
-                <label class="checkbox-container" aria-label="Выбрать наполнители: шоколадные">
+                <label class="checkbox-container" aria-label="Выбрать наполнители:
+                шоколадные">
                   <input type="checkbox" name="filler" value="шоколадные" checked>
                   <span class="checkbox-mark"></span>
                   шоколадные
                 </label>
               </li>
               <li class="filler-list-item" tabindex="0">
-                <label class="checkbox-container" aria-label="Выбрать наполнители: сахарные присыпки">
+                <label class="checkbox-container" aria-label="Выбрать наполнители:
+                сахарные присыпки">
                   <input type="checkbox" name="filler" value="сахарные присыпки" checked>
                   <span class="checkbox-mark"></span>
                   сахарные присыпки
                 </label>
               </li>
               <li class="filler-list-item" tabindex="0">
-                <label class="checkbox-container" aria-label="Выбрать наполнители: фрукты">
+                <label class="checkbox-container" aria-label="Выбрать наполнители:
+                фрукты">
                   <input type="checkbox" name="filler" value="фрукты">
                   <span class="checkbox-mark"></span>
                   фрукты
                 </label>
               </li>
               <li class="filler-list-item" tabindex="0">
-                <label class="checkbox-container" aria-label="Выбрать наполнители: сиропы">
+                <label class="checkbox-container" aria-label="Выбрать наполнители:
+                сиропы">
                   <input type="checkbox" name="filler" value="сиропы">
                   <span class="checkbox-mark"></span>
                   сиропы
                 </label>
               </li>
               <li class="filler-list-item" tabindex="0">
-                <label class="checkbox-container" aria-label="Выбрать наполнители: джемы">
+                <label class="checkbox-container" aria-label="Выбрать наполнители:
+                джемы">
                   <input type="checkbox" name="filler" value="джемы">
                   <span class="checkbox-mark"></span>
                   джемы
@@ -256,6 +324,31 @@
       </div>
     </div>
   </footer>
+  <div class="modal">
+    <div class="container">
+      <div class="modal-title-wrapper ">
+        <h2>Мы обязательно вам ответим!</h2>
+        <button class="modal-close" type="button" aria-label="Закрыть форму обратной связи">
+          <img src="img/close-cross.svg" width="18" height="17" alt="">
+        </button>
+      </div>
+      <form class="writeus-form" action="https://echo.htmlacademy.ru" method="post">
+        <p class="writeus-item">
+          <input id="writeus-name" class="writeus-item-input" type="text" name="name" value=""
+            placeholder="Как вас зовут?">
+        </p>
+        <p class="writeus-item">
+          <input id="writeus-email" class="writeus-item-input" type="text" name="email" value=""
+            placeholder="Ваша почта для ответа?">
+        </p>
+        <p class="writeus-item">
+          <input id="writeus-emailtext" class="writeus-item-input" type="text" name="email-text" value=""
+            placeholder="Напишите что-нибудь...">
+        </p>
+        <button class="button writeus-button" type="submit"><span class="button-text">Отправить</span></button>
+      </form>
+    </div>
+  </div>
 </body>
 
 </html>
