Добавляет стилизацию пагинации

--- a/catalog.html
+++ b/catalog.html
@@ -340,6 +340,9 @@
       <div class="container">
         <ul class="pagination-list">
           <li class="pagination-cover">
+            <a class="pagination-item pagination-item-disabled" href="#" aria-label="Текущая страница"><</a>
+          </li>
+          <li class="pagination-cover">
             <a class="pagination-item pagination-item-current" href="#" aria-label="Текущая страница">1</a>
           </li>
           <li class="pagination-cover">
@@ -355,7 +358,7 @@
             <a class="pagination-item" href="#" aria-label="Перейти на пятую страницу">5</a>
           </li>
           <li class="pagination-cover">
-            <a class="pagination-item" href="#" aria-label="Перейти на следующую страницу">Следующая</a>
+            <a class="pagination-item" href="#" aria-label="Перейти на следующую страницу">></a>
           </li>
         </ul>
       </div>
