Дополняет стилизация социальных кнопок

--- a/catalog.html
+++ b/catalog.html
@@ -204,7 +204,7 @@
               </li>
             </ul>
           </fieldset>
-          <button class="button filters-button">Применить</button>
+          <button class="filters-button">Применить</button>
         </form>
       </div>
     </section>
