Добавляет верстку блока подписки

--- a/index.html
+++ b/index.html
@@ -224,16 +224,18 @@
             </a>
           </aside>
           <aside class="mailing">
-            <p class="mailing-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого
-              вкусного, что у нас происходит. Обещаем не спамить и не слать всякой
-              ненужной ерунды. Честно =)
-            </p>
-            <form class="mailing-signup">
-              <label for="mailing-email"></label>
-              <input id="mailing-email" class="mailing-signup-input input-default" type="email" name="email"
-                placeholder="Электронная почта">
-              <button class="button mailing-button">Отправить</button>
-            </form>
+            <div class="mailing-bg">
+              <p class="mailing-text">Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого
+                вкусного, что у нас происходит. Обещаем не спамить и не слать всякой
+                ненужной ерунды. Честно =)
+              </p>
+              <form class="mailing-signup">
+                <label for="mailing-email"></label>
+                <input id="mailing-email" class="mailing-signup-input input-default" type="email" name="email"
+                  placeholder="Электронная почта">
+                <a class="button mailing-button" href="#">Отправить</a>
+              </form>
+            </div>
           </aside>
         </div>
       </div>
